# rust-otel-collector

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yaml  rust-otel-collector-API.postman_collection.json
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/app/dto/: healths.rs  item.rs  mod.rs  product.rs
src/app/handler/: healths.rs  items.rs  mod.rs  products.rs
src/app/repository/: item_repository.rs  mod.rs  product_repository.rs
src/app/route/: mod.rs
src/app/service/: healths.rs  item_service.rs  mod.rs  product_service.rs
src/pkg/: mod.rs
src/pkg/config/: app_config.rs
src/pkg/tracing/: tracing.rs
src/pkg/web/: mod.rs  request_id.rs  web.rs
