[package]
name = "rust-otel-collector"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-core = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std", "fmt", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
